--- a/《如何有效阅读一本书》奥野宣之.md
+++ b/《如何有效阅读一本书》奥野宣之.md
@@ -12,8 +12,13 @@
 
 然后关于笔记的检索，可以在笔记本上面贴上各种标签，或者把侧面涂上不同的颜色，就像字典一样，帮助你更快的找到相应的内容。通过将笔记本编号、日期、书名、作者、出版社、内容主题标签整理到电脑上，想要检索的时候查找一下就可以了。
 
+最后作者分享了一些读书生活中的小技巧，以及很多做笔记用的笔啊、本子、各类工具等等。可以看出作者是一个非常爱读书而且阅读量非常大的人，他主要的阅读方式是读纸质书用本子做读书笔记，进而形成了一套自己的读书体系。就像后记里面说的，这本书讲的最核心的一点就是整理和收纳。“当读书成为生活中的一种常态，它便需要整理与收纳的技巧。”他所写的这套整理和收纳的技巧，是非常适合他的阅读习惯和生活方式，而我们的阅读习惯又有很大的不同，所以他列出的一些经验和技巧仅供参考，形成自己的阅读习惯，并找出最适合我们自己的读书笔记整理和收纳的技巧才是最重要的。
 
+分析我个人的阅读习惯，纸质书和电子书都有阅读，现在是越来越倾向于电子阅读。这一方面是工作生活节奏的问题导致读纸质书会有很多不便，另一方面是技术相关的内容，读技术博客的需求要比读纸质书的时间更多，毕竟网络信息更新换代更快，纸质书从书写到出版基本就已经楼后与时代了。另一方面是，买了 kindle 的会员，免费借阅养成了读电子书的习惯。当然习惯是可以改变的，可以根据实际需要进行调整。身边的纸质书不能因为这个原因就放着不读了。另一方面，笔记的区别是最大的，作者完全推崇纸质笔记，而我更倾向于电子笔记。一方面电子笔记更便于保存、同步、搜索、编辑和阅读，添加各种多媒体资源也更方便。同步是我最看重的一点，我也是希望一个容器里面包含所有需要的内容，从各种渠道都可以很方便的访问这个容器，随时随地查看，随时随地都可以编辑。不过电子笔记和纸质笔记的一大不同点就是纸质笔记的自由度更高，电子笔记编辑格式更加困难。纸质笔记是连续的，一个笔记本就是一个整体，翻阅更方便。电子笔记的优点是如果打字速度快，输入速度可能比纸质笔记更快，另外就是可重复编辑，纸质笔记写完之后如果想修改就会非常麻烦，更多的只能做增量修改。电子笔记是不连续的，一般一篇电子笔记的篇幅很小，短小精悍，便于查看，但是导致很分散，所有的想法都是孤立的，不能形成链接。如果都整理到一份文档里面，格式又没有纸质笔记那么自由，限制较大。等等这些吧，双方互有利弊，怎么选择就看我们自己了。我还得好好想一想，也可以先多尝试尝试吧。
 
+可能的尝试：在一份文档里面整理尽可能多的内容，通过简单的符号区分管理，形成一套自己的整理和收纳的逻辑。
+尝试养成读纸质书的习惯，毕竟家里还有很多科技类的纸质书，如果不养成习惯，很难读下去，对于自己的成长也会造成负面影响。
+养成重读的习惯，作者整理读书笔记很大的一方面是为了以后参考，重读是整理读书笔记的很重要的一个目的，如果不重读，读书笔记就没有价值了。
 
 
 
